# Yara122

./: CMakeLists.txt  CMakeLists.txt.user.b93125a  game_or_history.cpp  main.cpp
.github/workflows/: ai_opponent.cpp  ci-cd.yml  game.cpp
tests/: CMakeLists.txt  test_game.cpp
